// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bails from non-deterministic values 1`] = `undefined`;

exports[`className + conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn2 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px _bg-red";
const _cn = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px _bg-blue";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={(props.className ? props.className + " " : "") + (!props.green ? _cn : _cn2)} />;
}"
`;

exports[`className + conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
:root ._w-10px{width:10px;}
:root ._bg-red{background-color:red;}
:root ._bg-blue{background-color:blue;}"
`;

exports[`conditional specific after generic style overrides 1`] = `
"const _cn1 = "_btlr-5px _bbrr-5px _bblr-5px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pl-t-space-2 _btrr-10px _pb-18px";
const _cn0 = "_btlr-2px _bbrr-2px _bblr-2px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pl-t-space-2 _btrr-10px _pb-15px";
const _cn9 = "_bbrr-5px _bblr-5px _btlr-7px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-2px";
const _cn8 = "_btlr-7px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-2px";
const _cn7 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-1px";
const _cn6 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-1px";
const _cn5 = "_bbrr-2px _bblr-2px _btlr-7px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-2px";
const _cn4 = "_btlr-7px _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-2px";
const _cn3 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-1px";
const _cn2 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _pt-t-space-2 _pr-t-space-2 _pb-t-space-2 _pl-t-space-2 _btrr-10px _mr-1px";
const _cn = "";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={_cn + (!!floating && floating2 ? _cn2 : !floating && !floating2 ? _cn3 : !!floating && floating2 ? _cn4 : !floating && floating2 ? _cn5 : !floating && floating2 ? _cn6 : floating && !floating2 ? _cn7 : !floating && floating2 ? _cn8 : floating && floating2 ? _cn9 : !floating ? _cn0 : _cn1)} />;
}"
`;

exports[`conditional specific after generic style overrides 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
:root ._pt-t-space-2{padding-top:var(--t-space-2);}
:root ._pr-t-space-2{padding-right:var(--t-space-2);}
:root ._pb-t-space-2{padding-bottom:var(--t-space-2);}
:root ._pl-t-space-2{padding-left:var(--t-space-2);}
:root ._btrr-10px{border-top-right-radius:10px;}
:root ._btlr-5px{border-top-left-radius:5px;}
:root ._bbrr-5px{border-bottom-right-radius:5px;}
:root ._bblr-5px{border-bottom-left-radius:5px;}
:root ._pb-18px{padding-bottom:18px;}
:root ._btlr-2px{border-top-left-radius:2px;}
:root ._bbrr-2px{border-bottom-right-radius:2px;}
:root ._bblr-2px{border-bottom-left-radius:2px;}
:root ._pb-15px{padding-bottom:15px;}
:root ._btlr-7px{border-top-left-radius:7px;}
:root ._mr-2px{margin-right:2px;}
:root ._mr-1px{margin-right:1px;}"
`;

exports[`conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn3 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px _bg-red";
const _cn2 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px _bg-blue";
const _cn = "";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={_cn + (!props.green ? _cn2 : _cn3)} />;
}"
`;

exports[`conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
:root ._w-10px{width:10px;}
:root ._bg-red{background-color:red;}
:root ._bg-blue{background-color:blue;}"
`;

exports[`fontFamily shorthand + styled + flatten + ternaries 1`] = `undefined`;

exports[`fontFamily shorthand + styled + flatten works 1`] = `undefined`;

exports[`non-flattened works 1`] = `
"// debug
import { Text } from '@tamagui/core';
export function Test(props) {
  return <Text textAlign={inMenu ? props.hello : 'right'} width="100%" hoverStyle={{
    o: 0.85
  }} {...active && {
    fow: '700',
    opacity: 1
  }} />;
}"
`;

exports[`ternaries + font families works 1`] = `
"const _cn3 = "font_body _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _ff-f-family";
const _cn2 = "font_heading _dsp-inline _bxs-border-box _ww-break-word _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _ff-f-family";
const _cn = "";
import { Text } from '@tamagui/core';
export function Test(props) {
  return <span className={_cn + (!window ? _cn2 : _cn3)} />;
}"
`;

exports[`ternaries + font families works 2`] = `
":root ._ff-f-family{font-family:var(--f-family);}
:root ._dsp-inline{display:inline;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._ww-break-word{word-wrap:break-word;}
:root ._whiteSpace-pre-wrap{white-space:pre-wrap;}
:root ._mt-0px{margin-top:0px;}
:root ._mr-0px{margin-right:0px;}
:root ._mb-0px{margin-bottom:0px;}
:root ._ml-0px{margin-left:0px;}"
`;

exports[`theme + media queries + conditionals extract 1`] = `
"const _cn3 = "_dsp-flex _ai-stretch _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _fd-_sm_column _fd-column";
const _cn2 = "_dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _fd-_sm_column";
const _cn = "";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <_TamaguiTheme name="surface1"><div className={_cn + (!onlyDemo ? _cn2 : _cn3)} /></_TamaguiTheme>;
}
import { Theme as _TamaguiTheme } from "@tamagui/web";"
`;

exports[`theme + media queries + conditionals extract 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
@media (max-width: 800px){:root:root:root:root:root ._fd-_sm_column{flex-direction:column;}}"
`;
